[package]
name = "hulk"
version = "0.1.0"
authors = ["01Intelligence, Inc."]
edition = "2018"
resolver = "2"

[dependencies]
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_info"] }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
tokio = { version = "1.10.0", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.40"
thiserror = "1.0.25"
crossbeam = "0.8.0"
nix = "0.20.0"
which = "4.1.0"
actix-web = { version = "4.0.0-beta.8", features = ["rustls"] }
rustls = "0.19.1"
notify = "5.0.0-pre.9"
typetag = "0.1.7"
strum = { version = "0.21.0", features = ["derive"] }
opentelemetry = "0.14.0"
opentelemetry-jaeger = "0.13.0"
derivative = "2.2.0"
backtrace = "0.3.59"
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock", "serde", "datetime_default"] }
highway = "0.6.4"
hex-literal = "0.3.1"
byteorder = "1.4.3"
hex = "0.4.3"
slog-term = "2.8.0"
slog-async = "2.6.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
dirs = "3.0.2"
constant_time_eq = "0.1.5"
jsonwebtoken = "7.2.0"
rand = "0.8.3"
base64 = "0.13.0"
regex = "1.5.4"
term = "0.7.0"
async-trait = "0.1.50"
cc = "1.0.68"
tokio-util = "0.6.7"
heim = { version = "0.1.0-rc.1", features = ["disk"] }
validator = { version = "0.13.0", features = ["derive"] }
http = "0.2.4"
maplit = "1.0.2"
bstr = "0.2.16"
unicase = "2.6.0"
ipnet = "2.3.1"
dyn-clone = "1.0.4"
path-clean = "0.1.0"
reed-solomon-erasure = { version = "4.0.2", features = ["simd-accel"] }
relative-path = "1.4.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
url = "2.2.2"
colored = "2.0.0"
pnet = "0.28.0"
# uom = { version = "0.31.1", features = ["usize", "u8", "u16", "u32", "u64", "u128", "isize", "i8", "i16", "i32", "i64", "i128"] }
path-absolutize = "3.0.10"
actix-rt = "2.2.0"
actix-server = "2.0.0-beta.5"
const_format = "0.2.14"
trust-dns-resolver = "0.20.3"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
hyper = "0.14.9"
ring = "0.16.20"
md-5 = "0.9.1"
sha2 = "0.9.5"
derive_more = "0.99.16"
actix-http = "3.0.0-beta.8"
rmp-serde = "0.15.5"
quick-xml = { version = "0.22.0", features = ["serialize"] }
educe = "0.4.18"
etcd-client = { version = "0.7.0", features = ["tls"] }
humantime = "2.1.0"
async-nats = "0.9.18"
dashmap = { version = "4.0.2", features = ["serde", "raw-api"] }
futures-core = { version = "0.3.16", default-features = false }
futures-util = { version = "0.3.16", default-features = false }
pin-project = "1.0.8"
mime = "0.3.16"
bytes = "1.0.1"
cached = "0.24.0"
actix-service = "2.0.0"
askama_escape = "0.10.1"
tonic = { version = "0.5.0", features = ["tls"] }
prost = "0.8.0"
prost-types = "0.8.0"
byte-unit = { version = "4.0.12", default-features = false, features = ["std"] }
libc = "0.2.98"
tempfile = "3.2.0"
faccess = "0.2.3"
tokio-stream = "0.1.7"
deadpool = "0.8.2"
slab = "0.4.4"
bumpalo = "3.7.0"
cfg-if = "1.0.0"
memoffset = "0.6.4"
tokio-test = "0.4.2"
camino = "1.0.5"
async-recursion = "0.3.2"
serde_repr = "0.1.7"
rmp = "0.8.10"
twox-hash = "1.6.1"
ta = "0.5.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
scopeguard = "1.1.0"
itertools = "0.10.1"
digest = "0.9.0"
arcstr = "1.1.1"
snap = "1.0.5"

[dependencies.actix-cors]
git = 'https://github.com/actix/actix-extras'
branch = 'master'
package = 'actix-cors'

[patch.crates-io]
jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
reed-solomon-erasure = { git = 'https://github.com/01intelligence/reed-solomon-erasure', branch = 'master' }
actix-web = { git = 'https://github.com/01intelligence/actix-web', branch = 'master' }
quick-xml = { git = 'https://github.com/01intelligence/quick-xml', branch = 'golang_xml' }
mime = { git = 'https://github.com/01intelligence/mime', branch = '0.3.x' }
camino = { git = 'https://github.com/01intelligence/camino', branch = 'master' }
slog-term = { git = 'https://github.com/01intelligence/term', branch = 'master' }
chrono = { git = 'https://github.com/01intelligence/chrono', branch = 'v0.4.19' }
rmp = { git = 'https://github.com/01intelligence/msgpack-rust', branch = 'rmp/v0.8.10' }

[target.'cfg(unix)'.dependencies]
pprof = "0.4.3"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.9.1"

[target.'cfg(windows)'.dependencies]
windows = "0.18.0"
winbinding = { path = "winbinding" }

[build-dependencies]
time = "0.2.26"
tonic-build = "0.5.1"

[dev-dependencies]
criterion = "0.3.5"
